# funcdoodle

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .swp  CMakeCache.txt  CMakeLists.txt  Dockerfile  FDP.md  FuncDoodle  LICENSE  Makefile  NOTICE  PROJECT_FILE_FORMAT.md  README.md  TODO  TODO.md  a  anotherthing.toml  build.bat  build.sh  build.tar.xz  build_cross.sh  build_release.sh  clean.sh  cmake_install.cmake  compile_commands.json  completion.zsh  completion_cross.zsh  create_dmg.sh  debug_build_linux.tar.xz  debug_build_linux_tiling.tar.xz  error.txt  heh.fdp  heh2.fdp  icon.aseprite  icon.icns  imgui.ini  keys  (+23 more)
.cache/clangd/index/: Action.cc.54819DBED948AD97.idx  Action.cc.C6EE4BE7F450E064.idx  Action.h.0F4FA05FE3FC1382.idx  Action.h.32B3B76415F15A49.idx  App.cc.8CAFE0EE1C511321.idx  App.cc.E7DE7ABA6A228DE1.idx  App.h.81BA7337329159FF.idx  App.h.A592600F3EC2422D.idx  AssetLoader.cc.904D6A08FEA93DC4.idx  AssetLoader.cc.B1B72DB8151C31E1.idx  AssetLoader.h.2910B4968C3C0353.idx  AssetLoader.h.B52F2F7ABD33ED9E.idx  Audio.h.0CB95E2C7E1AEB77.idx  Audio.h.28187011D72E8B82.idx  AudioFile.h.9B3EE25CFB611A98.idx  AudioFile.h.DC799E0B85A65F3C.idx  AudioManager.cc.1F626F6287CB8646.idx  AudioManager.cc.D028A5A64A4CFA7B.idx  AudioManager.h.374B2C9968531A12.idx  AudioManager.h.FDC16258401EF84B.idx  DynArr.cc.B532BCF9A41D7688.idx  DynArr.cc.ECA849714886868A.idx  DynArr.h.0AB07F86B9D5162E.idx  DynArr.h.D09422B287FC1AB0.idx  Frame.cc.25B7E128BB25308A.idx  Frame.cc.834CEA8B67C42D39.idx  Frame.h.CE4D9B93992921C3.idx  Frame.h.E612CC71F7104EEC.idx  FrameRenderer.cc.2409BAD5E1867CA8.idx  FrameRenderer.cc.CC66D697B7F82338.idx  FrameRenderer.h.AD8C9C2689DD14EC.idx  FrameRenderer.h.E0DA10BD9FB7B1F5.idx  FrameRenderer2.cc.0057D59F618ECE38.idx  Grid.cc.D1AEC995EA18A5F3.idx  Grid.cc.E469CE2865AFE648.idx  Grid.h.BCE6859DC0A840DE.idx  Grid.h.D11767F4D07DCAE8.idx  Gui.h.6946CBF8FA6DDFF5.idx  Gui.h.923B5D53A33ADBCD.idx  LoadedAssets.cc.615B5FAA55557CB1.idx  (+306 more)
FuncDoodle.app/Contents/: Info.plist
FuncDoodle.app/Contents/MacOS/: FuncDoodle
FuncDoodle.app/Contents/Resources/: AppIcon.icns  imgui.ini
assets/: keys.txt
cmake/: FuncDoodleBuild.cmake  FuncDoodlePlatform.cmake  FuncDoodleSources.cmake
dmg/: Applications  FuncDoodle Installer.dmg
doc/: TODO.md
imtest/: MainTests.cc
lib/: Makefile.in
release/: funcdoodle-linux-tiling.tar.xz  funcdoodle-linux.tar.xz  funcdoodle-macos-arm64.tar.xz  funcdoodle-macos-x86_64.tar.xz
release/FuncDoodle-arm64.app/Contents/: Info.plist
release/FuncDoodle-arm64.app/Contents/MacOS/: FuncDoodle-arm64
release/FuncDoodle-arm64.app/Contents/MacOS/assets/: icon.icns
scripts/: build.bat  build.sh  build_app.sh  build_cross.sh  build_release.sh  create_dmg.sh  format.sh  imtest.sh  test.sh
scripts/completion/: completion.zsh  completion_cross.zsh
src/: Action.cc  Action.h  App.cc  App.h  AssetLoader.cc  AssetLoader.h  Audio.h  AudioManager.cc  AudioManager.h  DynArr.cc  DynArr.h  EditorController.cc  EditorController.h  Frame.cc  Frame.h  FrameRenderer.cc  FrameRenderer.h  Grid.cc  Grid.h  Gui.h  ImUtil.h  KeyHandler.cc  KeyHandler.h  Keybinds.cc  Keybinds.h  LoadedAssets.cc  LoadedAssets.h  LoadedImages.cc  LoadedImages.h  Macro.h  MacroUtils.cc  MacroUtils.h  Manager.cc  Manager.h  Player.cc  Player.h  PopupRegistry.cc  PopupRegistry.h  Project.cc  Project.h  (+15 more)
src/src/: Action.h  App.h  AssetLoader.cc  Grid.h  Gui.h  LoadedImages.cc  LoadedImages.h  MacroUtils.h  Manager.cc  Project.h  Tool.h
test/: Action.cc  Col.cc  DynArr.h  Exepath.cc  Frame.cc  Frame.h  General.cc  ImageArray.cc  ImageArrayTest.cc  Lia.cc  Macro.h  Uuid.cc  build.sh  main  main.cc
